swagger added for users
