# routes/user.js
@@ -1,14 +1,14 @@
-const controllers = require('../controllers/userContoller.js');
+const userControllers = require('../controllers/userContoller.js');
 const express = require('express');
 const router = express.Router();
 const utils = require('../validation/utils');
 
 
-router.get("/user", controllers.getAllUsers);
-router.get("user/:id", controllers.getUserID);
-router.post("/user", controllers.addUser);
-router.put("/user/:id", controllers.updateUser);
-router.delete("/user/:id", controllers.deleteUser);
+router.get("/user", userControllers.getAllUsers);
+router.get("user/:id", userControllers.getUserID);
+router.post("/user", userControllers.addUser);
+router.put("/user/:id", userControllers.updateUser);
+router.delete("/user/:id", userControllers.deleteUser);
 
 module.exports = router;
 
